added helper functions in Hand and Player. also added a class for static helper methods